@@ -3,6 +3,7 @@ Add Tri-Panel view
 Add genres and languages furniture option
 Fix login screen for light theme
 Fix SettingsProfile cut-off text
+Fix Autoscroll on single widgets
 
 0.9.27
 Add Settings Widget
